fix(auth-animation): align DevOps route and smooth node motion

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -261,7 +261,7 @@
 
 @keyframes nook-devops-packet-move {
   0% {
-    offset-distance: 0%;
+    left: 6%;
     opacity: 0;
   }
 
@@ -274,7 +274,7 @@
   }
 
   100% {
-    offset-distance: 100%;
+    left: 94%;
     opacity: 0;
   }
 }
@@ -638,8 +638,8 @@
 
 .nook-devops-traveler {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: calc(71.4% - 0.55rem);
+  left: 6%;
   z-index: 3;
   width: 1.08rem;
   height: 1.08rem;
@@ -647,11 +647,11 @@
   border: 1px solid rgba(186, 230, 253, 0.86);
   background: radial-gradient(circle, rgba(255, 255, 255, 0.98) 0%, rgba(125, 211, 252, 0.52) 72%);
   box-shadow: 0 0 22px rgba(56, 189, 248, 0.76);
-  offset-path: path("M 60 300 L 240 300 L 385 240 L 525 300 L 705 300 L 850 235 L 940 235");
   animation: nook-devops-packet-move 5.2s linear infinite;
 }
 
 .nook-devops-traveler-secondary {
+  top: calc(71.4% - 0.4rem);
   width: 0.82rem;
   height: 0.82rem;
   border-color: rgba(110, 231, 183, 0.86);
@@ -662,10 +662,10 @@
 
 .nook-devops-pipeline {
   position: absolute;
-  left: 8%;
-  right: 8%;
-  top: 58.5%;
-  height: 4rem;
+  left: 0;
+  right: 0;
+  top: 71.4%;
+  height: 0;
   z-index: 3;
 }
 
@@ -687,7 +687,7 @@
 
 .nook-devops-node {
   position: absolute;
-  top: 50%;
+  top: 0;
   display: flex;
   height: 3rem;
   width: 3rem;
@@ -702,12 +702,12 @@
 }
 
 .nook-devops-node-1 {
-  left: 0%;
+  left: 6%;
   animation-delay: 0.2s;
 }
 
 .nook-devops-node-2 {
-  left: 25%;
+  left: 28%;
   animation-delay: 0.8s;
 }
 
@@ -717,12 +717,12 @@
 }
 
 .nook-devops-node-4 {
-  left: 75%;
+  left: 72%;
   animation-delay: 2s;
 }
 
 .nook-devops-node-5 {
-  left: 100%;
+  left: 94%;
   animation-delay: 2.6s;
 }
 
